[CORE] Change get(0) to getFirst()
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>